--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<h1>Welcome to Accio Jobs!</h1>
 	<img height="300px" src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000">
-	<p>5 software program developer profession paths</p>
-	<ul><li>Cloud development</li><li> Desktop development</li><li> Video Sport development</li><li>Mobile development</li><li>Web development</li></ul>
+	<p><strong>5 software program developer profession paths</strong></p>
+	<ul><li><strong>Cloud development</strong></li><li><strong>Desktop development</strong></li><li><strong>Video Sport development</strong></li><li><strong>Mobile development</strong></li><li><strong>Web development</strong></li></ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
